refactor(Abstraction): Add BaseController and BaseService.
